Fix bug displaying images incorrectly on iOS

--- a/src/CSS/Experience.scss
+++ b/src/CSS/Experience.scss
@@ -75,7 +75,6 @@
   font-size: 16px;
   margin: 0 0 10px 0;
   list-style-position: inside;
-  text-align: justify;
 }
 
 @media screen and (min-width: $mobile) {
