--- a/src/CSS/Navbar.scss
+++ b/src/CSS/Navbar.scss
@@ -114,7 +114,7 @@
 .links-container {
   height: 50px;
   width: 120px;
-  background: $dark-colour;
+  background: $black;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -126,7 +126,8 @@
 }
 
 .links-container a img {
-  height: 80%;
+  height: 40px;
+  width: 40px;
 }
 
 @media screen and (min-width: $tablet) {
